syntax="proto3";
package ValidatedStreams;

service Streams
{
		rpc ValidateEvent (ValidateEventRequest) returns (ValidateEventResponse);
		//rpc WitnessedEvent(WitnessedEventRequest) returns (WitnessedEventResponse);
}
// a stream is an extrinsic that could be included in the block and executed by the validated-streams pallet
message ValidateEventRequest
{
		bytes event_id =1;
}
message ValidateEventResponse
{
		string status =1;
}
message WitnessedEventRequest
{
		bytes signature = 1;
		string pub_key = 2;
		ValidateEventRequest event= 3;
}
message WitnessedEventResponse
{
		string reply = 1;
}
